php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #69667 segfault in php_pgsql_meta_data
Submitted: 2015-05-20 06:07 UTC Modified: 2015-06-18 12:35 UTC
From: remi@php.net Assigned: remi (profile)
Status: Closed Package: PostgreSQL related
PHP Version: 5.5.25 OS: irrevelant
Private report: No CVE-ID: 2015-4644
 [2015-05-20 06:07 UTC] remi@php.net
Description:
------------
With specially crafted PHP code, can raise a segfault in php_pgsql_meta_data

  pg_insert($conn, '.',  array('foo' => 'bar')

This is related to incomplete fix for #68741

strtok_r return value is not checked in php_pgsql_meta_data



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-05-20 06:08 UTC] remi@php.net
-Status: Open +Status: Analyzed -Assigned To: +Assigned To: remi
 [2015-05-20 06:14 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=2cc4e69cc6d8dbc4b3568ad3dd583324a7c11d64
Log: Fixed Bug #69667 segfault in php_pgsql_meta_data
 [2015-05-20 06:14 UTC] remi@php.net
-Status: Analyzed +Status: Closed
 [2015-05-20 06:47 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f93d24aa673f0d06fc8ecb5bdb211d7e82440f21
Log: Fixed Bug #69667 segfault in php_pgsql_meta_data
 [2015-05-31 04:19 UTC] stas@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f93d24aa673f0d06fc8ecb5bdb211d7e82440f21
Log: Fixed Bug #69667 segfault in php_pgsql_meta_data
 [2015-06-18 12:35 UTC] kaplan@php.net
-CVE-ID: +CVE-ID: 2015-4644
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 23:00:01 2026 UTC