Fixed Bug #69667 segfault in php_pgsql_meta_data

Incomplete fix for #68741